src/manipulator/snapshots/annatto__manipulator__mv__tests__serialize_custom.snap
---
source: src/manipulator/mv.rs
expression: serialization.unwrap()
---
anno = "deprel"
direction = "target"
multi = "index"
copy = true

[component]
ctype = "Pointing"
layer = ""
name = "dep"
